RESOLVED FIXED82872
[V8] Web Inspector: don't crash when resolving DOM wrapper heap snapshot node to JS object
https://bugs.webkit.org/show_bug.cgi?id=82872
Summary [V8] Web Inspector: don't crash when resolving DOM wrapper heap snapshot node...
Yury Semikhatsky
Reported 2012-04-02 02:44:38 PDT
For each DOM wrapper in V8 bindings there is a boilerplate object which doesn't have a pointer to the native object and will fail on attempt to work with it. Inspector shouldn't resolve such objects.
Attachments
Patch (7.32 KB, patch)
2012-04-02 02:47 PDT, Yury Semikhatsky
no flags
Archive of layout-test-results from ec2-cr-linux-02 (7.45 MB, application/zip)
2012-04-02 04:45 PDT, WebKit Review Bot
no flags
Patch (11.56 KB, patch)
2012-04-02 04:59 PDT, Yury Semikhatsky
no flags
Patch (11.53 KB, patch)
2012-04-02 05:10 PDT, Yury Semikhatsky
no flags
Yury Semikhatsky
Comment 1 2012-04-02 02:47:09 PDT
WebKit Review Bot
Comment 2 2012-04-02 04:45:42 PDT
Comment on attachment 135050 [details] Patch Attachment 135050 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12310463 New failing tests: inspector/profiler/heap-snapshot-inspect-dom-wrapper.html
WebKit Review Bot
Comment 3 2012-04-02 04:45:49 PDT
Created attachment 135065 [details] Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Ilya Tikhonovsky
Comment 4 2012-04-02 04:54:33 PDT
Comment on attachment 135050 [details] Patch lgtm
Yury Semikhatsky
Comment 5 2012-04-02 04:59:55 PDT
Yury Semikhatsky
Comment 6 2012-04-02 05:10:19 PDT
Yury Semikhatsky
Comment 7 2012-04-02 05:13:27 PDT
Note You need to log in before you can comment on or make changes to this bug.