[V8] Web Inspector: don't crash when resolving DOM wrapper heap snapshot node to JS object https://bugs.webkit.org/show_bug.cgi?id=82872

Reviewed by Pavel Feldman.

Source/WebCore:

Don't resolve heap object to a JS object if it is a wrapper boilerplate.

Test: inspector/profiler/heap-snapshot-inspect-dom-wrapper.html

* bindings/v8/ScriptProfiler.cpp:
(WebCore::ScriptProfiler::objectByHeapObjectId):
(WebCore):
* inspector/InspectorProfilerAgent.cpp:
(WebCore::InspectorProfilerAgent::getObjectByHeapObjectId):

LayoutTests:

* inspector/profiler/heap-snapshot-inspect-dom-wrapper-expected.txt: Added.
* inspector/profiler/heap-snapshot-inspect-dom-wrapper.html: Added.
* platform/gtk/Skipped:
* platform/mac/Skipped:
* platform/qt/Skipped:
* platform/win/Skipped:
* platform/wincairo/Skipped:

Canonical link: https://commits.webkit.org/100229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112861 268f45cc-cd09-0410-ab3c-d52691b4dbfc